--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header ul li a:hover {
 #home {
   margin-top: 100px;
   display: flex;
-  align-items: center;
+  align-items: right center;
   justify-content: space-between;
   height: 95vh;
   width: calc(100% - 100px);
