--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ header ul li a:hover {
 #home {
   margin-top: 100px;
   display: flex;
-  align-items: right center;
+  align-items: center;
   justify-content: space-between;
-  height: 95vh;
+  height: 220vh;
   width: calc(100% - 100px);
   margin-left: auto;
   margin-right: auto;
